fixing flex spacing

--- a/screen.css
+++ b/screen.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .image-container {
